[gd_scene load_steps=19 format=3 uid="uid://cfsmgnec2vx2t"]

[ext_resource type="Script" path="res://scenes/shot/shot.gd" id="1_paa5b"]
[ext_resource type="Texture2D" uid="uid://ba3l0vlsv7hql" path="res://assets/sprites/Main_Characters/Char_fire.png" id="1_xtaen"]
[ext_resource type="Texture2D" uid="uid://d1jlru0cvu4vs" path="res://assets/sprites/Enemies/Alien2_fire.png" id="3_e2h24"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1lcw6"]
atlas = ExtResource("1_xtaen")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lan0d"]
atlas = ExtResource("1_xtaen")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6pqa"]
atlas = ExtResource("1_xtaen")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk0y0"]
atlas = ExtResource("1_xtaen")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6ysd"]
atlas = ExtResource("1_xtaen")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cu2bb"]
atlas = ExtResource("1_xtaen")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6kwtr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lcw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lan0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6pqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk0y0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6ysd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cu2bb")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kmdi5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gw2nt"]
radius = 6.08276

[sub_resource type="AtlasTexture" id="AtlasTexture_lx1ji"]
atlas = ExtResource("3_e2h24")
region = Rect2(0, 0, 31, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n31b"]
atlas = ExtResource("3_e2h24")
region = Rect2(31, 0, 31, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnu0p"]
atlas = ExtResource("3_e2h24")
region = Rect2(62, 0, 31, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3041"]
atlas = ExtResource("3_e2h24")
region = Rect2(93, 0, 31, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5b56"]
atlas = ExtResource("3_e2h24")
region = Rect2(124, 0, 31, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_3xn44"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx1ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n31b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnu0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3041")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5b56")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[node name="Fire" type="StaticBody2D"]
script = ExtResource("1_paa5b")

[node name="PlayerAnimatedSprite" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_6kwtr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kmdi5")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
enable_node_path = NodePath("../CollisionShape2D")

[node name="PlayerArea2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea2D"]
position = Vector2(1, 4)
shape = SubResource("CircleShape2D_gw2nt")

[node name="Alien1AnimatedSprite" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_3xn44")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="area_entered" from="PlayerArea2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
